Changed title and description

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
+title: T-REx
+description: A Large Scale Alignment of Natural Language with Knowledge Base Triples for Relation Extraction and Natural Language Generation
 theme: jekyll-theme-minimal
