--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 title: T-REx
 description: A Large Scale Alignment of Natural Language with Knowledge Base Triples for Relation Extraction and Natural Language Generation
 theme: jekyll-theme-minimal
+show_downloads: true
